--- a/run_model.ipynb
+++ b/run_model.ipynb
@@ -73,7 +73,7 @@
      "text": [
       "Building prefix dict from the default dictionary ...\n",
       "Loading model from cache /tmp/jieba.cache\n",
-      "Loading model cost 0.536 seconds.\n",
+      "Loading model cost 0.571 seconds.\n",
       "Prefix dict has been built successfully.\n"
      ]
     }
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,12 +381,12 @@
     "    model, tokenizer, sents,\n",
     "    device='cpu',\n",
     "    max_length=100,\n",
-    "    temperature=1.0,\n",
-    "    top_k=50,\n",
-    "    top_p=0.9\n",
-    "):\n",
-    "    no_repeat_ngram_size = 3\n",
+    "    temperature=0.7,\n",
+    "    top_k=0,\n",
+    "    top_p=0.9,\n",
+    "    no_repeat_ngram_size = 3,\n",
     "    repetition_penalty = 1.2\n",
+    "):\n",
     "    batch_size = 1\n",
     "    model.eval()\n",
     "    with torch.no_grad():\n",
@@ -483,52 +483,130 @@
     "\n",
     "            if tokenizer.sep_id == tokens_to_add.detach().cpu().numpy().flatten()[0]:\n",
     "                return tokenizer.decode(\n",
-    "                    output_ids.detach().cpu().numpy()[0]\n",
+    "                    output_ids.detach().cpu().numpy()[0][:-1]\n",
     "                )\n",
     "            \n",
     "            gen_len += 1\n",
-    "\n",
-    "            print(\n",
-    "                \n",
-    "            )\n",
     "        \n",
     "        return next_token"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def chat():\n",
+    "    history = []\n",
+    "    max_history = 5\n",
+    "    while True:\n",
+    "        text = input('>>>')\n",
+    "        if text == 'quit' or len(text.strip()) <= 0:\n",
+    "            break\n",
+    "        history.append(text)\n",
+    "        history = history[-max_history:]\n",
+    "        out = generate_samples(model, tokenizer, history)\n",
+    "        print(out)\n",
+    "        history.append(out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jovyan/work/eva/CPM-2.0-GEN/model.py:280: UserWarning: Mixed memory format inputs detected while calling the operator. The operator will output contiguous tensor even if some of the inputs are in channels_last format. (Triggered internally at  /pytorch/aten/src/ATen/native/TensorIterator.cpp:918.)\n",
-      "  attention_scores = torch.mul(\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "我\n",
-      "我要\n",
-      "我要看\n",
-      "我要看哪\n",
-      "我要看哪部\n",
-      "我要看哪部啊\n"
+      ">>>你好\n",
+      "您好,有什么问题我可以帮您处理或解决呢?#e-s[数字x]\n",
+      ">>>\n"
      ]
     }
    ],
    "source": [
-    "b = generate_samples(model, tokenizer, [\n",
-    "    '你喜欢看电影吗',\n",
-    "    '当然是喜欢了',\n",
-    "    '那你喜欢看什么类型的',\n",
-    "    '我喜欢看动画片,可以打发时间',\n",
-    "    '那你喜欢看哪个动画片？'\n",
-    "])"
+    "chat()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>>你喜欢听相声吗？\n",
+      "我很少看电视,除了看电视的时候就没别的兴趣了。\n",
+      ">>>你喜欢郭德纲吗\n",
+      "不喜欢他的歌啊。\n",
+      ">>>郭德纲是干嘛的？\n",
+      "什么叫做相声演员,怎么会没有人知道呢?\n",
+      ">>>那你听过他的作品吗\n",
+      "当然了,不过我很少看相声,要么就是因为郭老师的一些事情才关注他的,你可以去搜一下他以前的节目,或者看看有哪些好玩的。\n",
+      ">>>那你知道他的徒弟吗\n",
+      "不清楚,但你要问他师傅就一定不是他师傅吧?\n",
+      ">>>\n"
+     ]
+    }
+   ],
+   "source": [
+    "chat()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>>今天好倒霉啊\n",
+      "我下午打球都痛到没知觉了,现在才睡醒\n",
+      ">>>我说我好倒霉啊\n",
+      "你这也太衰了吧。。。\n",
+      ">>>你不问问吗\n",
+      "真的很烦恼,我的天\n",
+      ">>>你烦恼什么\n",
+      "我还没睡,就是突然很想哭。。\n",
+      ">>>为什么想哭\n",
+      "因为没有人陪。。\n",
+      ">>>我陪着你啊\n",
+      "好吧,,晚安~\n",
+      ">>>\n"
+     ]
+    }
+   ],
+   "source": [
+    "chat()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>>我想要去土耳其\n",
+      "你不是说就快了嘛\n",
+      ">>>嗯，下个月去\n",
+      "哦哦!那还挺好的。就是太冷了。\n",
+      ">>>温度还好吧\n",
+      "也还好啊,冷是因为有暖气\n",
+      ">>>\n"
+     ]
+    }
+   ],
+   "source": [
+    "chat()"
    ]
   },
   {
