add pytorch & encoder only export code

--- a/to_tensorflow.ipynb
+++ b/to_tensorflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
    "source": [
     "config = T5Config(\n",
     "    vocab_size=30000,\n",
-    "#     n_positions=self.n_positions,\n",
+    "    # n_positions=self.n_positions,\n",
     "    d_model=2048,\n",
     "    d_ff=5120,\n",
     "    d_kv=2048 // 32,\n",
@@ -1230,13 +1230,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [
@@ -1297,13 +1290,6 @@
     "for x in get_block_weight(1, t='decoder', name=True):\n",
     "    print(x[0], x[1].shape)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1373,13 +1359,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [
@@ -1389,7 +1368,7 @@
      "text": [
       "Building prefix dict from the default dictionary ...\n",
       "Loading model from cache /tmp/jieba.cache\n",
-      "Loading model cost 1.413 seconds.\n",
+      "Loading model cost 0.559 seconds.\n",
       "Prefix dict has been built successfully.\n"
      ]
     },
@@ -1424,7 +1403,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save_pretrained('./tf_eva')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11G\ttf_eva\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!du -sh tf_eva"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1432,13 +1437,11 @@
      "output_type": "stream",
      "text": [
       ">>>你好\n",
-      "亲爱的,请问有什么可以帮您的啊?\n",
-      ">>>你想去看电影吗\n",
-      "没有什么想看电影的呀\n",
-      ">>>那你能陪我去看电影吗\n",
-      "我能你要去看吗\n",
-      ">>>我们走去看吧\n",
-      "嗯嗯好啊好啊\n",
+      "[5503, 4, 29810]\n",
+      "很好~帮忙转发了啦\n",
+      ">>>我想看郭德纲的相声\n",
+      "[5503, 4, 52, 68, 236, 758, 1888, 5635, 21, 694, 4, 23, 86, 55, 13214, 11, 6707, 4, 29810]\n",
+      "我刚看完~\n",
       ">>>\n"
      ]
     }
@@ -1456,7 +1459,9 @@
     "    for x in sentence:\n",
     "        input_ids += tokenizer.encode(x) + [tokenizer.sep_id]\n",
     "    input_ids += [tokenizer.get_sentinel_id(0)]\n",
+    "    print(input_ids)\n",
     "    input_ids = tf.constant([input_ids])\n",
+    "    \n",
     "    out = model.generate(\n",
     "        input_ids,\n",
     "        decoder_start_token_id=tokenizer.get_sentinel_id(0),\n",
