update generate function

--- a/infer_onnx.ipynb
+++ b/infer_onnx.ipynb
@@ -32,47 +32,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "encoder = create_model_for_provider('./onnx_eva_q/encoder.onnx')\n",
     "decoder = create_model_for_provider('./onnx_eva_q/decoder.onnx')\n",
-    "lm = create_model_for_provider('./onnx_eva_q/lm.onnx')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "lm = create_model_for_provider('./onnx_eva_q/lm.onnx')\n",
     "tokenizer = EncDecTokenizer('./EVA/src/bpe_dialog_new/vocab.txt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def talk(s=['你好'], num_returns=10, top_k=50):\n",
-    "    ban = [\n",
-    "        5641,  # 京东\n",
-    "        4087,  # 客服\n",
-    "        2184,  # #\n",
-    "        175,   # [\n",
-    "        12539, # 小妹\n",
-    "        724,   # 客户\n",
-    "        1468,  # 商品\n",
-    "        6111,  # vi\n",
-    "        6454,  # 订单\n",
-    "        3748,  # 商家\n",
-    "        1548,  # 咨询\n",
-    "        6391,  # 发票\n",
-    "        681,   # 单\n",
-    "        5942,  # 上门\n",
-    "    ]\n",
+    "default_ban = [\n",
+    "    5641,  # 京东\n",
+    "    4087,  # 客服\n",
+    "    2184,  # #\n",
+    "    175,   # [\n",
+    "    12539, # 小妹\n",
+    "    724,   # 客户\n",
+    "    1468,  # 商品\n",
+    "    6111,  # vi\n",
+    "    6454,  # 订单\n",
+    "    3748,  # 商家\n",
+    "    1548,  # 咨询\n",
+    "    6391,  # 发票\n",
+    "    681,   # 单\n",
+    "    5942,  # 上门\n",
+    "    4129,  # 售后\n",
+    "    6756,  # 卖家\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def talk(\n",
+    "    s=['你好'],\n",
+    "    num_returns=1,\n",
+    "    top_k=50,\n",
+    "    top_p=1.0,\n",
+    "    temperature=1.0,\n",
+    "    max_len=64,\n",
+    "    ban=default_ban\n",
+    "):\n",
     "    input_ids = []\n",
     "    for ss in s:\n",
     "        input_ids += tokenizer.encode(ss) + [tokenizer.sep_id]\n",
@@ -87,8 +97,9 @@
     "    decoder_input_ids = np.repeat(np.array([[tokenizer.get_sentinel_id(0)]]), num_returns, axis=0)\n",
     "    decoder_mask = np.ones_like(decoder_input_ids)\n",
     "    choice_inds = list(range(top_k))\n",
-    "    all_probs = []\n",
-    "    for i in range(64):\n",
+    "    all_probs = None\n",
+    "    finished = []\n",
+    "    for i in range(max_len):\n",
     "        decoder_last_hidden_state = decoder.run(['last_hidden_state'], {\n",
     "            \"decoder_input_ids\": decoder_input_ids,\n",
     "            \"decoder_attention_mask\": decoder_mask,\n",
@@ -100,76 +111,175 @@
     "        for x in ban:\n",
     "            logits[:, -1, x] = -9999\n",
     "\n",
+    "        logits = logits / temperature\n",
     "        scores = softmax(logits[:, -1, :])\n",
-    "        next_probs = np.sort(scores)[:, ::-1][:, :top_k]\n",
+    "        next_probs = np.sort(scores)[:, ::-1]\n",
+    "        if top_p > 0.0 and top_p < 1.0:\n",
+    "            next_probs = next_probs[:, :int(next_probs.shape[1] * (1 - top_p))]\n",
+    "        if top_k > 0 and top_k < next_probs.shape[1]:\n",
+    "            next_probs = next_probs[:, :top_k]\n",
     "        next_probs_1 = next_probs / next_probs.sum(axis=1).reshape((-1, 1))\n",
-    "        next_tokens = np.argsort(scores)[:, ::-1][:, :top_k]\n",
-    "        inds = [\n",
-    "            np.random.choice(choice_inds, p=next_probs_1[0])\n",
-    "            for _ in range(num_returns)\n",
-    "        ]\n",
-    "        next_tokens = [\n",
+    "\n",
+    "        next_tokens = np.argsort(scores)[:, ::-1]\n",
+    "        if top_p > 0.0 and top_p < 1.0:\n",
+    "            next_tokens = next_tokens[:, :int(next_tokens.shape[1] * (1 - top_p))]\n",
+    "        if top_k > 0 and top_k < next_probs.shape[1]:\n",
+    "            next_tokens = next_tokens[:, :top_k]\n",
+    "\n",
+    "        inds = np.random.choice(\n",
+    "            choice_inds,\n",
+    "            num_returns,\n",
+    "            p=next_probs_1[0],\n",
+    "            replace=True\n",
+    "        )\n",
+    "        next_tokens = np.array([\n",
     "            x[i]\n",
     "            for x, i in zip(next_tokens, inds)\n",
-    "        ]\n",
-    "        next_probs = [\n",
+    "        ])\n",
+    "        next_probs = np.array([\n",
     "            x[i]\n",
     "            for x, i in zip(next_probs, inds)\n",
-    "        ]\n",
-    "        all_probs.append(np.log(next_probs))\n",
+    "        ])\n",
+    "        if all_probs is None:\n",
+    "            all_probs = np.log(next_probs).reshape(-1, 1)\n",
+    "        else:\n",
+    "            all_probs = np.concatenate([\n",
+    "                all_probs,\n",
+    "                np.log(next_probs).reshape(-1, 1)\n",
+    "            ], axis=1)\n",
     "        decoder_input_ids = np.concatenate([\n",
     "            decoder_input_ids,\n",
-    "            np.array(next_tokens).reshape((num_returns, 1))\n",
+    "            np.array(next_tokens).reshape((-1, 1))\n",
     "        ], axis=1)\n",
-    "        if np.sum(np.sum(decoder_input_ids == tokenizer.sep_id, axis=1) > 0) >= num_returns:\n",
+    "        for i in reversed(range(decoder_input_ids.shape[0])):\n",
+    "            if tokenizer.sep_id in decoder_input_ids[i]:\n",
+    "                finished.append((decoder_input_ids[i], all_probs[i]))\n",
+    "                decoder_input_ids = np.concatenate([\n",
+    "                    decoder_input_ids[:i],\n",
+    "                    decoder_input_ids[i + 1:]\n",
+    "                ])\n",
+    "                all_probs = np.concatenate([\n",
+    "                    all_probs[:i],\n",
+    "                    all_probs[i + 1:]\n",
+    "                ])\n",
+    "                encoder_last_hidden_state = np.concatenate([\n",
+    "                    encoder_last_hidden_state[:i],\n",
+    "                    encoder_last_hidden_state[i + 1:]\n",
+    "                ])\n",
+    "                mask = np.concatenate([\n",
+    "                    mask[:i],\n",
+    "                    mask[i + 1:]\n",
+    "                ])\n",
+    "        if len(decoder_input_ids) == 0:\n",
     "            break\n",
-    "    all_probs = np.array(all_probs).transpose()\n",
-    "    decoder_input_ids = decoder_input_ids[:, 1:]\n",
-    "    rets = []\n",
-    "    for i, ind in enumerate(np.argmax(decoder_input_ids == 4, axis=1)):\n",
-    "        decoder_input_ids[i, ind:] = 0\n",
-    "        rets.append(tokenizer.decode(decoder_input_ids[i, :ind]))\n",
-    "    final_scores = np.sum((decoder_input_ids > 0) * all_probs, axis=1)\n",
-    "    return rets, final_scores"
+    "        decoder_mask = np.ones_like(decoder_input_ids)\n",
+    "    rets = [\n",
+    "        tokenizer.decode(x[0])\n",
+    "        for x in finished\n",
+    "    ]\n",
+    "    scores = [\n",
+    "        np.mean(x[1])\n",
+    "        for x in finished\n",
+    "    ]\n",
+    "    return rets, scores"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['您好,请问有什么可以帮助您的吗?']\n",
-      "['请问您是要换绑手机号还是签收信息']\n",
-      "['我在吃饭']\n",
-      "['亲爱的,请问有什么问题我可以帮您处理或解决呢?您好']\n",
-      "['您好,您可以看下您的地址和电话吗?']\n",
-      "['请问您是要问问题什么吗']\n",
-      "['您好,亲爱的有什么可以为您效劳的呢']\n",
-      "['好久没有跟大家见面,今天跟大家一起分享我这段时间的所感所想。']\n",
-      "['亲亲您好,有什么问题我可以帮您处理或解决呢?']\n",
-      "['您好,请问有什么可以帮助您?']\n",
-      "CPU times: user 4min 31s, sys: 73.6 ms, total: 4min 31s\n",
-      "Wall time: 6.71 s\n"
+      "CPU times: user 6min 35s, sys: 14.7 s, total: 6min 49s\n",
+      "Wall time: 6.1 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "for i in range(10):\n",
-    "    r = talk(['你好啊'], 1)\n",
-    "    print(r[0])"
+    "finished = talk(max_len=64, num_returns=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['<s_0>请问您是要修改什么信息呢<sep>',\n",
+       " '<s_0>请问您是要修改什么信息呢<sep>',\n",
+       " '<s_0>有什么可以帮到您的吗?<sep>',\n",
+       " '<s_0>您好,请问有什么可以帮您?<sep>',\n",
+       " '<s_0>您好,请问有什么可以帮您?<sep>',\n",
+       " '<s_0>您好,请问有什么可以帮您?<sep>',\n",
+       " '<s_0>您好,请问有什么可以帮您?<sep>',\n",
+       " '<s_0>请问有什么问题我可以帮您处理或解决呢?<sep>',\n",
+       " '<s_0>请问有什么问题我可以帮您处理或解决呢?你好<sep>',\n",
+       " '<s_0>您好,请您提供一下您的姓名和联系方式,我们会在今天下午(周日)下午(周六)为您回电,请您注意接听电话哈<sep>']"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "finished[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-7.2126923,\n",
+       " -7.2126923,\n",
+       " -5.9243674,\n",
+       " -4.9900384,\n",
+       " -4.9900384,\n",
+       " -4.9900384,\n",
+       " -4.9900384,\n",
+       " -2.449787,\n",
+       " -3.0436127,\n",
+       " -2.7436812]"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "finished[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<s_0>请问有什么问题我可以帮您处理或解决呢?<sep>'"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "finished[0][np.argmax(finished[1])]"
+   ]
   }
  ],
  "metadata": {
