add loss sample code

--- a/predict_new.ipynb
+++ b/predict_new.ipynb
@@ -17,15 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = T5ForConditionalGeneration.from_pretrained('./torch_eva/')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "model = T5ForConditionalGeneration.from_pretrained('./torch_eva/')\n",
     "tokenizer = EncDecTokenizer('./EVA/src/bpe_dialog_new/vocab.txt')"
    ]
   },
